--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -123,7 +123,7 @@
 
  .card-holder {
       display: grid;
-      gap: 1rem;
+      gap: 1.5rem;
       margin: 1rem;
       border-top: 1px solid rgb(235, 235, 235);
       padding-top: 20px;
